# Binance-scalping-bot

./: .env.example  .gitignore  Procfile  README.md  docker-compose.yml  requirements.txt  test.db
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  test.db  verify_market_data.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 202607210001_initial_schema.py  202607210002_database_settings.py  202607210003_market_data.py  202607210004_market_regime.py  202607210005_strategy_setups.py  202607220006_signal_grading.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: logging.py  settings.py
backend/app/database/: session.py
backend/app/models/: __init__.py  enums.py  market_data.py  mixins.py  regime.py  strategy.py  trading.py
backend/app/schemas/: execution.py  health.py  market_data.py  regime.py  scanner.py  settings.py  signals.py  strategy.py  trades.py
backend/app/services/: binance_client.py  indicators.py  (+15 more)
backend/tests/: conftest.py  test_binance_client.py  test_binance_trading_client.py  test_database.py  test_execution_api.py  test_execution_live_service.py  test_health.py  test_market_data_api.py  test_market_data_runner.py  test_market_data_service.py  test_market_regime_service.py  test_migrations.py  test_regime_api.py  test_scanner_api.py  test_secret_logging.py  test_settings.py  test_settings_api.py  test_signal_automation_runner.py  test_signal_automation_service.py  test_signals_api.py  test_trade_management_runner.py  test_trades_api.py  test_trend_pullback_strategy.py
(+44 files in other folders)
